Agregando el NavBar

--- a/index.html
+++ b/index.html
@@ -10,6 +10,18 @@
 </head>
 
 <body>
+
+    <div class="nav">
+        <h1 class="nav-title">Profile</h1>
+        <ul class="nav-links">
+            <li><a href="#">Home</a></li>
+            <li><a href="#" class="active">My Profile</a></li>
+            <li><a href="#">Find Connections</a></li>
+            <li><button class="btn">Sign Out</button></li>
+        </ul>
+    </div>
+
+
     <div class="mainContainer">
         <section class="section1">
             <div class="container">
